[Minor] Automated Code cleanup: 'Files.readString()' or 'Files.writeString()' can be used